# TEngine

./: .dockerignore  .gitignore  CMakeLists.txt  LICENSE  README.md
Editor/Alice/: CMakeLists.txt
Editor/Alice/Sources/: app.manifest  main.cpp
Editor/Alice/Sources/Core/: EventPropogationMixin.cpp  EventPropogationMixin.h  IPresenter.h  IView.h
Editor/Alice/Sources/Core/CustomParent/: CustomParentBuilder.h
Editor/Alice/Sources/Core/IoC/: Container.h
Editor/Alice/Sources/Core/Thread/: FunctionConveyer.cpp  FunctionConveyer.h
Editor/Alice/Sources/MainWindow/: IMainWindowPresenter.h  IMainWindowView.h  MainWindowPresenter.cpp  MainWindowPresenter.h  MainWindowView.cpp  MainWindowView.h
Editor/Alice/Sources/MainWindow/Children/MainMenu/: IMainMenuPresenter.h  IMainMenuView.h  MainMenuPresenter.cpp  MainMenuPresenter.h  MainMenuView.cpp  MainMenuView.h
Editor/Alice/Sources/MainWindow/Children/Scene/: ISceneManagementView.h  SceneManagementView.cpp  SceneManagementView.h
Editor/Alice/Sources/MainWindow/Children/ToolBar/: IToolBar.h  ToolBar.cpp  ToolBar.h
Editor/Alice/Sources/MainWindow/Components/: GraphicContext.cpp  GraphicContext.h  IGraphicContext.h
Editor/Alice/Sources/MainWindow/Components/Graphic/: GraphicContext.cpp  GraphicContext.h  IGraphicContext.h
Editor/Alice/Sources/MainWindow/Components/Tree/: ISceneTree.h  (+8 more)
Plugins/ImageLoading/BmpImageLoadingPlugin/: CMakeLists.txt
Plugins/ImageLoading/BmpImageLoadingPlugin/Sources/: BmpImageLoadingPlugin.cpp  BmpImageLoadingPlugin.h  BmpImageLoadingPluginImplementation.cpp  BmpImageLoadingPluginImplementation.h
Plugins/ImageLoading/BmpImageLoadingPlugin/Sources/Models/: BmpPluginImage.cpp  BmpPluginImage.h
Plugins/ImageLoading/BmpImageLoadingPlugin/Sources/libbmp/: bmp.cpp  bmp.h
Plugins/ImageLoading/PngLoadingPlugin/: CMakeLists.txt
Plugins/ImageLoading/PngLoadingPlugin/Sources/: PngLoadingPluginImplementation.cpp  PngLoadingPluginImplementation.h
Plugins/ImageLoading/PngLoadingPlugin/Sources/Models/: PngPluginImage.cpp  PngPluginImage.h
Plugins/MeshLoading/GltfLoadingPlugin/: CMakeLists.txt
Plugins/MeshLoading/GltfLoadingPlugin/Sources/: GltfLoadingPluginImplementation.cpp  GltfLoadingPluginImplementation.h
Plugins/MeshLoading/GltfLoadingPlugin/Sources/Models/: ObjPluginMesh.h  ObjPluginShape.cpp
Plugins/MeshLoading/ObjLoadingPlugin/: CMakeLists.txt
Plugins/MeshLoading/ObjLoadingPlugin/Sources/: ObjLoadingPluginImplementation.cpp  ObjLoadingPluginImplementation.h
Plugins/MeshLoading/ObjLoadingPlugin/Sources/Models/: ObjPluginMesh.cpp  ObjPluginShape.cpp  ObjPluginShape.h
TEngine/: CMakeLists.txt
TEngine/BuildinResources/Shaders/: SimpleFragmentShader.glsl  SimpleVertexShader.glsl
TEngine/BuildinResources/Shaders/Mesh/: ColoredShapeFragmentShader.glsl  ColoredShapeVertexShader.glsl  TexturedShapeFragmentShader.glsl  TexturedShapeFragmentShaderRGB.glsl  TexturedShapeFragmentShaderRGBA.glsl  TexturedShapeVertexShader.glsl  _lightning.glsl
TEngine/BuildinResources/Shaders/Mesh/Models/: PointLight.glsl
TEngine/BuildinResources/Shaders/Mesh/Utils/: LightCountUniforms.glsl
TEngine/BuildinResources/Shaders/SkyBox/: FragmentShader.glsl  VertexShader.glsl
TEngine/BuildinResources/Shaders/Solidbox/: FragmentShader.glsl  VertexShader.glsl
TEngine/Sources/: Engine.cpp  Engine.h  IEngine.cpp  IEngine.h
TEngine/Sources/Components/Audio/Models/: SoundInfo.h
TEngine/Sources/Components/Audio/Services/: AlMacroses.h  AndroidAudioService.cpp  AndroidAudioService.h  AudioService.cpp  AudioService.h  IAudioService.h
TEngine/Sources/Components/Core/: CoreService.cpp  CoreService.h  ICoreService.h
TEngine/Sources/Components/Core/Filesystem/: AndroidFileService.cpp  AndroidFileService.h  FileService.cpp  FileService.h  IFileService.h
TEngine/Sources/Components/Core/Models/: ThreadType.h
TEngine/Sources/Components/Events/Models/: KeyStates.h  KeyboardKeys.h  MouseButtons.h
TEngine/Sources/Components/Events/Services/: AndroidEventService.cpp  AndroidEventService.h  EventService.cpp  EventService.h  EventServiceBase.cpp  EventServiceBase.h  GlfwEventService.cpp  GlfwEventService.h  IEventService.h  Win32EventService.cpp  Win32EventService.h
TEngine/Sources/Components/Graphics/: AndroidGraphicsService.cpp  AndroidGraphicsService.h  CocoaGraphicsService.h  CocoaGraphicsService.mm  GlfwGraphicsService.cpp  GlfwGraphicsService.h  GraphicsService.cpp  GraphicsService.h  GraphicsServiceBase.cpp  GraphicsServiceBase.h  IGraphicsService.h  Win32GraphicService.cpp  Win32GraphicService.h
TEngine/Sources/Components/Graphics/CameraTracking/: ListenerCameraTrackingStrategy.cpp  ListenerCameraTrackingStrategy.h
TEngine/Sources/Components/Graphics/Indexing/: IIndexingService.h  IndexingService.cpp  IndexingService.h
TEngine/Sources/Components/Graphics/Models/: Box.h  GraphicsParameters.cpp  GraphicsParameters.h  IGraphicsParameters.h  Matrix4x4.h  Parallelepiped.h  PrimitiveTypes.h  Vector2d.h  Vector3d.h
TEngine/Sources/Components/Graphics/PlatformWrapping/: GlWrapper.cpp  GlWrapper.h
TEngine/Sources/Components/Network/Http/: INetworkService.h  NetworkService.cpp  NetworkService.h
TEngine/Sources/Components/Network/WebSocket/: IWebSocketFactory.h  WebSocketFactory.cpp  WebSocketFactory.h
TEngine/Sources/Components/State/Deserialization/: DeserializationService.cpp  DeserializationService.h  IDeserializationService.h
TEngine/Sources/Components/State/Serialization/: ISerializationService.h  SerializationService.cpp  SerializationService.h
TEngine/Sources/Configs/: TEngineExport.h
TEngine/Sources/Mixins/: ContextAwareMixin.h  PluginsLoadingAware.hpp  SpinLock.h  ThreadSafeExecutionAware.h  TypeInfoAware.h
TEngine/Sources/Mixins/Models/: DynamicLibrary.hpp
TEngine/Sources/Models/: ActionResult.h  DataActionResult.h  EngineParameters.cpp  EngineParameters.h  IEngineParameters.cpp  IEngineParameters.h
examples/Demo/: CMakeLists.txt
examples/Demo/DemoResources/test cube/: cube.mtl
examples/Demo/DemoResources/test plane/: plane.mtl
examples/Demo/Sources/: main.cpp
(+404 files in other folders)
